--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
 <!-- Funnel - Custom Tracking Codes (Head) -->
 <!-- Custom JS (Head) -->
 <!--Optional, send client hints to get accurate device data-->
-<meta http-equiv="delegate-ch" content="sec-ch-ua https://jo7oyg.mcgo2.com; sec-ch-ua-mobile https://jo7oyg.mcgo2.com; sec-ch-ua-arch https://jo7oyg.mcgo2.com; sec-ch-ua-model https://jo7oyg.mcgo2.com; sec-ch-ua-platform https://jo7oyg.mcgo2.com; sec-ch-ua-platform-version https://jo7oyg.mcgo2.com; sec-ch-ua-bitness https://jo7oyg.mcgo2.com; sec-ch-ua-full-version-list https://jo7oyg.mcgo2.com; sec-ch-ua-full-version https://jo7oyg.mcgo2.com" />
+<meta http-equiv="delegate-ch" content="sec-ch-ua https://6ebbcd.mcgo2.com; sec-ch-ua-mobile https://6ebbcd.mcgo2.com; sec-ch-ua-arch https://6ebbcd.mcgo2.com; sec-ch-ua-model https://6ebbcd.mcgo2.com; sec-ch-ua-platform https://6ebbcd.mcgo2.com; sec-ch-ua-platform-version https://6ebbcd.mcgo2.com; sec-ch-ua-bitness https://6ebbcd.mcgo2.com; sec-ch-ua-full-version-list https://6ebbcd.mcgo2.com; sec-ch-ua-full-version https://6ebbcd.mcgo2.com" />
+
 <!-- MaxConv Tracking Script Base Code-->
-<script>!function(w,d,o,n,c){w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};var s=d.createElement(n),t=d.getElementsByTagName(n)[0];s.async=!0;s.defer=!0;s.src="t/t.js";t.parentNode.insertBefore(s,t);}(window,document,"maxconv","script");</script>
-<noscript><link rel="stylesheet" href="t/t.css" /></noscript>
+<script>!function(w,d,o,n,c){w[o]=w[o]||function(){(w[o].q=w[o].q||[]).push(arguments)};var s=d.createElement(n),t=d.getElementsByTagName(n)[0];s.async=!0;s.defer=!0;s.src="https://6ebbcd.mcgo2.com/t/t.js";t.parentNode.insertBefore(s,t);}(window,document,"maxconv","script");</script>
+<noscript><link rel="stylesheet" href="https://6ebbcd.mcgo2.com/t/t.css?mc_ns=1" /></noscript>
 <!-- End MaxConv Tracking Script Base Code-->
 </head>
 <body>
@@ -3141,7 +3142,7 @@
 document.addEventListener('DOMContentLoaded', () => {
     const buttons = document.querySelectorAll('.btn-href-update');
     buttons.forEach(button => {
-        button.href = 'https://jo7oyg.mcgo2.com/click'; // New URL you want to set
+        button.href = 'https://6ebbcd.mcgo2.com/click'; // New URL you want to set
     });
 });
 </script>
